<resources>
    <string name="app_name">User Profile</string>
    <string name="splash_text">User Profile Kotlin</string>
    <string name="confirm">Confirm</string>
    <string name="name">%1$s %2$s</string>
    <string name="picture_text">OPEN PICTURE GALLERY</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="description_text">Description</string>
</resources>
